Added simulation mechanics. Started testing the taxation and maintenance